# CREAS-Demo

./: apply-changes.js  apply-v2-changes.js  avicola-DT-v2.html  avicola-DT-v3.html  avicola-DT.html  avicola-hub.html  avicola-mobile.html  bachoco-DT-DESKTOP (3).html  bachoco-mobile.html  dt-enhancements.js  ductos-DT.html  estacion-compresora-DT.html  fulfillment-DT.html  fv-DT.html  gas-hub.html  gas_assets.json  gas_sensors.json  gnc-DT.html  index.html  live_check.js  lng-DT.html  package-lock.json  pet-DT-v2.html  pet-DT.html  portal_debug.html  portal_script.js  portal_script2.js  spadiko-avaluos.html  tas-DT.html  tequilera-DT.html  tequilera_assets.json  tequilera_sensors.json
.claude/: launch.json
creas-engine/agents/: engagement-scanner.md  inbox-monitor.md  (+2 more)
obra-ya/: .env.example  .gitignore  .railway-deploy-trigger  ANALISIS_CRITICO_COMPLETO.md  ANALISIS_VARIANTES.md  DESIGN_SYSTEM.md  Dockerfile  PROCESOS_OBRAYA.html  PROCESOS_OBRAYA.md  WHATSAPP_SETUP.md  docker-compose.yml  generar_pdf.py  railway.json  record_video.js  requirements.txt  seed.py  showcase.html  test_imports.py
obraya/: Landing.html
pet-platform/: README.md  docker-compose.yml
pet-platform/backend/: pyproject.toml
pet-platform/backend/app/adapters/: maximo_mock.py  sap_mock.py
pet-platform/backend/app/modules/assets/: router.py  schema.py  service.py
pet-platform/backend/app/modules/copilot/: router.py
pet-platform/backend/app/modules/simulation/: router.py
pet-platform/backend/app/modules/telemetry/: router.py
pet-platform/backend/app/modules/work_orders/: router.py
(+159 files in other folders)
