[project]
name = "axis-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "redis>=5.0",
  "aiokafka>=0.10",
  "asyncio-mqtt>=0.16",
  "httpx>=0.27",
  "simpy>=4.1",
  "python-multipart>=0.0.9",
  "anthropic>=0.30",
  "pgvector>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2","pytest-asyncio>=0.23","ruff>=0.5","mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
